objects/EDX_Registration_Status__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Id__c</fullName>
        <label>Collateral Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDX_Registration_Status_Res__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDX Registration Status Res</label>
        <referenceTo>EDX_Registration_Status_Res__c</referenceTo>
        <relationshipLabel>EDX Registration Status</relationshipLabel>
        <relationshipName>EDX_Registration_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>error_Message__c</fullName>
        <label>error Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>esisId__c</fullName>
        <label>esisId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Final_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Final Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>registration_Id__c</fullName>
        <label>registration Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_Number__c</fullName>
        <label>registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDX Registration Status</label>
    <nameField>
        <displayFormat>RSN-{0000}</displayFormat>
        <label>EDX Registration Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDX Registration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>